style.css
.hero {
    padding: 20px;
    color:whitesmoke;
    font-size: 30px;
    background-color:#560319;
    font-family: Arial, Helvetica, sans-serif;
    margin: -10px;

} 


nav {

    display: block;
    justify-content: space-evenly;
    align-items: center;
    margin: auto;
    padding: 10 px;
}

.nav-item-list {
    display: flex;
    float: right;
    padding: 10px;
    flex-direction: row;
    text-decoration:none ;
    
}

li {
    padding: 10px;
    color: whitesmoke;
    font-family: Arial, Helvetica, sans-serif;
    text-decoration: none;
    
}

body{

    background:#91a3b0;
}
    

#top-left{

    display: inline-flex;
    flex-direction: column;
    color: whitesmoke;
    margin: 100px;
    font-size: 50px;
    font-family: Arial, Helvetica, sans-serif;
}
    


.link-list {
 color: black;

}

#projects-1{
    display: inline-flex;
    flex-direction: column;
    color: whitesmoke;
    margin: 100px;
    font-size: 50px;
    font-family: Arial, Helvetica, sans-serif;
    
}




#info{

    display: flex;
    flex-direction: column;
    color: whitesmoke;
    margin: 60px;
    font-size: 20px;
    font-family: Arial, Helvetica, sans-serif;
}


img{
    height: 200px;
    width:200px;
    display: flex;
    margin-left:auto;
    margin-right:auto;

}

p{
    color: whitesmoke;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 25px;
}

a {

    color:whitesmoke;
    text-decoration: underline;
    
}

a:hover{
    background-color: violet;
    text-decoration: underline;
}

.thumbnail:hover{
    position: relative;
    top: -25px;
    left: -35px;
    width: 500px;
    height: auto;
    display: block;
    z-index: 999;
}


@media screen and (max-width: 992px) {
    .thumbnail {
        width: 50px;
    }

  
    

